--- a/localisation/KR_Shanxi_l_simp_chinese.yml
+++ b/localisation/KR_Shanxi_l_simp_chinese.yml
@@ -305,7 +305,7 @@
  SHX_sfs_active_title_key:0 "逐鹿山西"
  SHX_sfs_inactive_title_key:0 "十年计划继续"
  SHX_sfs_active_desc_key:0 "自从国民军撤退进入山西以来，阎锡山督理和冯玉祥大帅就联合起来对付他们在北方共同的敌人。阎锡山的权力历来以§P省政府§!为根基，他编织维护着一张根深蒂固的微妙利益网络。而冯玉祥的权力根植于§g他对国民军的掌握§!，这支强大的军队支持民族主义，倾向革命，并以其狂热的激情而闻名。\n\n这两位都是豪情满怀的领袖，都对山西的管理有各自的独到创见。山西是个贫穷的省份，这里资源稀缺，哪怕只执行一项涉及未来的议程都稍嫌不够。一度沉寂的§Y十年计划§!，突然受到两派人马的极大重视，他们此时都试图加强自己的合法性。\n\n为了赢得山西的权力斗争，玩家必须让§Y权力平衡处于任意一方的优势处§!以彻底击垮竞争者。但是要小心，并非所有人都完全忠于二位大帅，如果双方的政治斗争过于激烈，也许他们会为了山西的未来而做出自己的选择...\n\n§C少壮派的激进度为：[Getrevolutionline]§!\n§C国民军当前的力量为：[SHX.GMJ_coup_strength]§!"
- SHX_sfs_inactive_desc_key:0 "山西的权力斗争的结束并没有给十年计划画上句号。虽然这个计划最初是作为和平发展经济的手段，也是制衡华北强势派系的手段，但在八省联合崩溃后，它又焕发了新生。在[SHX.GetLeader]的领导下，十年计划是他维持自己的地位并试图争夺国家领导权的计划中不可或缺的一部分。为此，改组后的[SHX.GetNameDef]政府和人民孜孜不倦地执行[SHX.GetLeader]的未来愿景，希望展示他作为开明统治者的智慧，并为其他省份树立榜样。然而，山西是否能配得上其“模范省”的声誉，将不仅取决于其督理的动向，还将取决于其人民的意志和牺牲。"
+ SHX_sfs_inactive_desc_key:0 "山西的权力斗争的结束并没有给十年计划画上句号。虽然这个计划最初是作为和平发展经济的手段，也是制衡华北强势派系的手段，但在八省联合崩溃后，它又焕发了新生。在[SHX.GetLeader]的领导下，十年计划是他维持自己的地位并试图争夺国家领导权的计划中不可或缺的一部分。为此，改组后的[SHX.GetNameDef]政府和人民孜孜不倦地执行[SHX.GetLeader]的未来愿景，希望展示他作为开明统治者的智慧，并为其他省份树立榜样。然而，山西是否能配得上其“模范省”的声誉，将不仅取决于其督理的动向，还将取决于其人民的意志和牺牲。\n\n§C少壮派的激进度为：[Getrevolutionline]§!"
  SHXsmall:0 "§R不值一提§!"
  SHXlittle:0 "§R风雨欲来§!"
  SHXmore:0 "§R暗流涌动§!"
@@ -711,6 +711,7 @@
  SHX_start_resistance_in_state: "任何被标记的地区将会在我们与其主人开战时获得抵抗"
  SHX_gain_compliance_after_taking_state: "在第一次占领一个§Y被标记的地区§!后，在这个地区获得§G30%§!§L顺从度§!"
  SHX_small_militias_tooltip: "§G一支小规模的民兵部队将会应召捍卫家园！§!\n"
+ SHX_QIE_negotiations_over_tooltip: "太原-北京谈判尚未发生"
  SHX_QIE_can_negotiate_tooltip: "我们能与北京谈判"
  SHX_zhifeng_no_negotiations_tooltip: "§R我们将不会与北京谈判……§!"
  SHX_zhifeng_yes_negotiations_tooltip: "§G我们将遣使带去提议§!"
@@ -744,6 +745,10 @@
  SHX_QIE_negotiation_offer_on_table_level_3_key: "山西省府将接管关中，包括重镇西安。[QIE.GetLeader]正式承认[SHX.GetLeader]为山西和陕西的督理，而督理将公开承认中央政府，在中国统一进程中支持北京。晋东地区的归属问题将被搁置，中央政府继续实控该地区，但双方同意缓和该地区的紧张局势。此外，在[SHX.GetLeader]大帅的领导下，如有保卫国家的战争，山西省军将全力支援中央。"
  SHX_QIE_negotiation_offer_on_table_level_4_key: "山西省府将接管关中，包括重镇西安。[QIE.GetLeader]正式承认[SHX.GetLeader]为山西和陕西的督理，而督理将公开承认中央政府，在中国统一进程中支持北京。中央政府从晋东撤军，将该地区移交给山西省府。而在[SHX.GetLeader]大帅的领导下，如有保卫国家的战争，山西省军将全力支援中央。"
  SHX_QIE_negotiation_offer_on_table_level_5_key: "山西省府将接管关中，包括重镇西安。[QIE.GetLeader]正式承认[SHX.GetLeader]为西北政务委员会主席，而督理将公开承认中央政府，在中国统一进程中支持北京。中央政府从晋东撤军，将该地区移交给山西省府。列土封疆后，阎锡山被赋予了代表北京经略西北（而更具体地说，主要是绥远）的权力，而在[SHX.GetLeader]大帅的领导下，如有保卫国家的战争，山西省军将全力支援中央。"
+ SHX_QIE_influence_variable_below_50_tooltip: "小于[QIE.GetFlag]§Y50%§!影响力"
+ SHX_QIE_influence_variable_below_25_tooltip: "小于[QIE.GetFlag]§Y25%§!影响力"
+ SHX_QIE_influence_variable_above_10_tooltip: "大于[QIE.GetFlag]§Y10%§!影响力"
+ SHX_QIE_influence_variable_above_50_tooltip: "大于[QIE.GetFlag]§Y50%§!影响力"
  SHX_give_divisions: "[SHX_give_divisions_number]"
  SHX_give_one_division: "\n§L假如此省份被拿下，§Y[SHX.GetNameDef]§!将会获得一个师§!"
  SHX_give_compliance: "[SHX_give_compliance_numbers]"
@@ -824,7 +829,10 @@
  SHX_QIE_reject_vanguard_plan_tt: "§R[SHX.GetLeader]会对事态的转变感到不悦……§!"
  SHX_QIE_has_approved_vanguard_plan_tt: "§C[QIE.GetNameDef]已批准我们收复西北边疆的计划。然而，一旦双方的§Y互不侵犯条约§!到期，他们就能尝试控制我们。§!"
  SHX_vanguard_of_north_tt: "§C我们会奏请[QIE.capital.GetCapitalVictoryPointName]，让其正式承认我们为§Y$SHX_NCPC_DEF$§!，赋予我们为中国收复西北边疆的自主权。若他们同意，我们将获得以下效果：§!"
-SHX_lategame_effect_tooltip: "\n§L我们将开始从地区军阀到新兴全国逐鹿者的艰难转变。一些§Y国家精神§!将被§R移除§!或者§G转化为地区修正§!，而且我们也将§R获得新的国家精神§!。我们的§Y国策树§!将§G发生重大改变§!，而且因为我们向着中国统一前进，§R我们的非军事国策树将被移除§!§!\n\n"
+ SHX_lategame_effect_tooltip: "\n§L我们将开始从地区军阀到新兴全国逐鹿者的艰难转变。一些§Y国家精神§!将被§R移除§!或者§G转化为地区修正§!，而且我们也将§R获得新的国家精神§!。我们的§Y国策树§!将§G发生重大改变§!，而且因为我们向着中国统一前进，§R我们的非军事国策树将被移除§!§!\n\n"
+ SHX_automatic_Yan_purge_tooltip: "§R假如阎锡山消灭了国民军威胁，他们将会被立即清洗！§!"
+ SHX_automatic_GMJ_coup_tooltip: "§R假如国民军获得了军事优势，他们将会立即起事！§!"
+ SHX_lategame_begin_flag: "§G我们已经凭借自己的努力成为了一股不可忽视的势力§!"
 
 #国家精神
  SHX_neutrality:0 "山西中立政策"
@@ -1237,8 +1245,7 @@ SHX_lategame_effect_tooltip: "\n§L我们将开始从地区军阀到新兴全国
  SHX_aa_measures:0 "建设防空阵地"
  SHX_aa_measures_desc:0 "除了为我军提供天然堡垒之外，山西崎岖的地势还可以成为防空阵地的理想藏匿点和驻扎地。敌人可能认为他们可以轻易地飞入我省，但他们将无法看到我们在下方的防空炮！"
  SHX_modern_arsenal:0 "西北现代军工厂"
- SHX_modern_arsenal_desc:0 "山西军队在质量上可能仍落后于欧美俄日。不过我们为现代化太原兵工厂所做的改进和完善工作都相当成功。得益于我们的才智和努力，山西军队的炮彈也许是全国部队中最为
- 先进的！"
+ SHX_modern_arsenal_desc:0 "山西军队在质量上可能仍落后于欧美俄日。不过我们为现代化太原兵工厂所做的改进和完善工作都相当成功。得益于我们的才智和努力，山西军队的炮彈也许是全国部队中最为先进的！"
 
 #外交
  SHX_out_of_beijing:0 "摆脱北京的阴影"
@@ -1311,39 +1318,39 @@ SHX_lategame_effect_tooltip: "\n§L我们将开始从地区军阀到新兴全国
 
  #冯玉祥
  SHX_feng_yu_xiang:0 "基督将军的归来"
- SHX_feng_yu_xiang_desc:0 " "
+ SHX_feng_yu_xiang_desc:0 "如今阎锡山将为他十年前的决定后悔终身，自陕西西进的国民军将晋绥军彻底击败，冯玉祥再一次重新站上了权力的最高峰。山西也将进入一个全新的时期，冯玉祥和国民军将会努力使山西成为全国发展最好的地区。山西将从阎锡山的道路上摆脱出来，迎接一个全新的未来。"
  SHX_jie_na_zuo_yi:0 "接纳左翼人士"
- SHX_jie_na_zuo_yi_desc:0 " "
+ SHX_jie_na_zuo_yi_desc:0 "随着冯玉祥和他的国民军开始执政，省政府对于左翼人士的态度也在发生着根本的变化。冯玉祥将军接纳了那些与他患难与共的国民党人们，他们将在政府中担任更多职位，这在全省引起了轩然大波，许多人表示山西的春天即将到来了。"
  SHX_chong_hui_zheng_gui:0 "重回正轨"
- SHX_chong_hui_zheng_gui_desc:0 " "
- SHX_she_li_sheng_xian:0 "设立省宪"
- SHX_she_li_sheng_xian_desc:0 " "
+ SHX_chong_hui_zheng_gui_desc:0 "经过了漫长的深思熟虑，冯玉祥和国民军选择接纳了阎锡山的政治遗产。虽然政府选择了延续阎锡山的道路，但是左翼改造已经成了必然。尽管省政府依然保持威权体制但在不远的将来一定会为全省人民带来自由。"
+ SHX_she_li_sheng_xian:0 "修订省宪"
+ SHX_she_li_sheng_xian_desc:0 "尽管山西并未参与到十年前南方轰轰烈烈的省宪运动，但是这并不妨碍山西也曾出台了一部分类似的法律法规，甚至组建了省议会。但是这些不过是阎锡山独裁的障眼法，是他用来装点省政府的吉祥物，毫无现实价值可言。如今冯玉祥大帅当政，他的政治改革第一步便是实权化省宪法，同时这本宪法也将成为他未来统一全国后所推行的民国宪法的蓝本。"
  SHX_tu_di_ge_ming:0 "彻底土地革命"
- SHX_tu_di_ge_ming_desc:0 " "
+ SHX_tu_di_ge_ming_desc:0 "仅仅是部分土地改革是无法扭转如今山西人地紧张问题本质的，省政府将要推动一场完全的土地革命，将土地从乡绅地主的手中掠夺转而由贫农们耕种，以实现真正的耕者有其田。"
  SHX_tui_jin_gong_ye_hua:0 "推进工业化"
- SHX_tui_jin_gong_ye_hua_desc:0 " "
+ SHX_tui_jin_gong_ye_hua_desc:0 "随着山西在逐渐现代化，工业生产方面开始出现了不足。于是冯玉祥决定开始推行快速工业化并开始引进先进的大型工业企业，以推动山西从单一的资源工业到以轻工业、重工业和资源工业并行且健康发展的轨道上来。而这也将消化山西如今大量的失业人口，推动社会稳定。"
  SHX_xiang_cun_yi_wu_jiao_yu:0 "资助乡村学子"
- SHX_xiang_cun_yi_wu_jiao_yu_desc:0 " "
+ SHX_xiang_cun_yi_wu_jiao_yu_desc:0 "长久以来，城市教育和乡村教育之间一直不平衡。城市教育通常以现代化的小学、中学和大学组成，而乡村则通常以传统私塾教育为主。在冯玉祥大师上任后，决定开始对城市和乡村教育进行平衡，其中一环便是加大对乡村教育和乡村学子的资助，让这些出自农村的贫寒学生享受和城里一样的现代化教育。"
  SHX_gai_zu_sheng_yi_hui:0 "改革省议会"
- SHX_gai_zu_sheng_yi_hui_desc:0 " "
+ SHX_gai_zu_sheng_yi_hui_desc:0 "随着新一届省政府的开始运转，省议会改革也将重新提上日程。目前省议会采取的是推荐加间接选举的双重模式来选举省议员，在此次省议会改革后省议员选举将采用更加公正透明的单一选举制，以此来避免议会内部的腐败和贪污。"
  SHX_yu_tai_yuan_shang_hui:0 "与太原商会合作"
- SHX_yu_tai_yuan_shang_hui_desc:0 " "
+ SHX_yu_tai_yuan_shang_hui_desc:0 "作为识时务的有志商人们，冯玉祥自然不会吝啬对他们的报酬，山西的改革自然要由山西人进行，资金也当然是由山西人付出，回报也将全部归于山西。"
  SHX_gai_ge_sheng_fu:0 "改革省府"
- SHX_gai_ge_sheng_fu_desc:0 " "
+ SHX_gai_ge_sheng_fu_desc:0 "在冯玉祥大师眼中，省政府就是要为人民服务的。所以现任省政府团队一直都在努力创造一个公平公正、清正廉洁的改革省府，随着各项法案的陆续实施，省政府也在朝着冯玉祥将军理想下的改革省府逐步前进。尽管任有人指责政府的改革不过是虚情假意，但是更多人的都相信冯玉祥大师治下的山西将会变得更好。"
  SHX_fa_yang_she_hui_zheng:0 "宣扬社会正能量"
- SHX_fa_yang_she_hui_zheng_desc:0 " "
+ SHX_fa_yang_she_hui_zheng_desc:0 "在如今飞速发展的山西，精神文明建设也是重中之重。早年间曾经一度出现了许多观点错误的负能量，而到了如今人们应当多做一些更为符合现代社会且有正能量的事情是非常有必要的。因为正能量是在如今社会中必须要有且必须宣传的。"
  SHX_tui_xing_sheng_jian_yun_dong:0 "推进乡建运动"
- SHX_tui_xing_sheng_jian_yun_dong_desc:0 " "
+ SHX_tui_xing_sheng_jian_yun_dong_desc:0 "农村一直都是急需要现代化的，尤其是山西的乡村大多还都是住着窑洞。对于一个经济在逐步发展中的省来说，现代化的新乡村、新城镇是很有必要的。于是全山西开展了轰轰烈烈的乡建运动，同时开始推动了一系列配合乡建运动的新乡村风貌行动。这极大促进了山西乡村的发展。"
  SHX_tui_gao_fu_li_dai_yu:0 "提高福利待遇"
- SHX_tui_gao_fu_li_dai_yu_desc:0 " "
+ SHX_tui_gao_fu_li_dai_yu_desc:0 "过去的山西，福利待遇可以说是几乎没有。这也是省政府最为人诟病的一方面，来自工人和左翼人士的抗议也或多或少的围绕着福利政策而进行。直到如今，这一切的一切开始产生变化。冯玉祥省长决定提高工人的福利待遇并为此立法，这也预示着政府和工人之间将不再拥有隔阂。"
  SHX_gong_hui_ping_deng:0 "工会公平法案"
- SHX_gong_hui_ping_deng_desc:0 " "
+ SHX_gong_hui_ping_deng_desc:0 "冯玉祥将军在上任后的这段时间内前往工会调查，发现了工会在一些方面对工人阶级的相对不平衡并对此痛心疾首。遂决定推出工会公平法案来保护工人阶级，而工人阶级对于这部法案也报有非常高的期待。同时对于工会的不作为和不平衡也将被铲除。"
  SHX_shan_xi_de_wei_lai:0 "山西省的未来"
- SHX_shan_xi_de_wei_lai_desc:0 " "
+ SHX_shan_xi_de_wei_lai_desc:0 "随着山西政局的逐步稳定，经济发展和军事水平也在逐步上升。对于现在拥有勃勃生机的山西来说，未来还是会有更加稳定繁荣的发展。"
  SHX_jin_bu_zhi_sheng:0 "进步之省"
- SHX_jin_bu_zhi_sheng_desc:0 " "
+ SHX_jin_bu_zhi_sheng_desc:0 "随着国民军内部的左翼派系和左翼人士共同执掌山西，山西也成为了一个各个左翼人士心中的进步之省。而在诸多进步人士和社会稳定因素的共同作用下，山西也将迎来一个繁荣的未来。"
  SHX_xian_dai_hua_mo_fan:0 "现代化模范省"
- SHX_xian_dai_hua_mo_fan_desc:0 " "
+ SHX_xian_dai_hua_mo_fan_desc:0 "在冯玉祥和他的国民军在山西执政后，山西也迎来了翻天覆地的变化。日新月异的变化也使得山西变的越来越现代化，成为了人民口中津津乐道的现代化模范省。随着政局的日渐稳定，未来和全国也在等着冯玉祥和他的国民军。"
 
 #事件
  shx.0.t:0 "晋系军阀"
@@ -1405,7 +1412,7 @@ SHX_lategame_effect_tooltip: "\n§L我们将开始从地区军阀到新兴全国
  shx.earlygame.15.feng.b:0 "最好不要自找麻烦。"
  shx.earlygame.16.t:0 "省议会"
  shx.earlygame.16.d:0 "议长的发言还没有结束，冯阎两派的议员们便早早的吵作一团，相互嘘声。尽管，两派的大佬们互相都和和气气的，说些你好我好大家好的话。但是议院内，预算、法案、政策一切的提案双方都无法达成共识。久而久之，这些基本上毫无军事背景的议员们甚至不止一次在议院内上演全武行，更甚至一次议期内发生多次斗殴，早上一帮阎派议员刚把冯派议员打进医院，下午又被更多冯派议员围殴。一方动手，另一方火速跟上，能动手的事情他们绝不含糊，南拳北腿，纸笔座椅板凳一切顺手的东西都是他们的武器，单挑、群架、男单、男双，花样百出，上演一场又一场“铁血战役”，议院简直是一场又一场武斗大会。省内的花边小报还常常列出议员拳王表，从议员们的“战绩”中品鉴议员们的拳脚功夫。而比起议员们的暴力，国民军和晋绥军的克制反而显得尤为珍贵，令北京来的观察员不禁摇头叹息。"
- shx.earlygame.16.a:0 " "
+ shx.earlygame.16.a:0 "勃勃生机"
  shx.409.t:0 "大清行省"
  shx.409.d:0 "由于对宣统维新的支持，山西省长阎锡山开始自称“山陕总督”，并改挂大清的省旗以示对北京新政府的支持。"
  shx.409.a:0 "很好！"
