--- a/localisation/KR_Shanxi_l_simp_chinese.yml
+++ b/localisation/KR_Shanxi_l_simp_chinese.yml
@@ -766,6 +766,9 @@
  stability10_tooltip: "执行该决议将花费$stability10_blocked$"
  stability15_tooltip: "执行该决议将花费$stability15_blocked$"
  stability20_tooltip: "执行该决议将花费$stability20_blocked$"
+ SHX_army_exp_25_cp_25: "£army_experience [?25|H0] £command_power §Y15§!"
+ SHX_army_exp_25_cp_25_blocked: "£army_experience [?25|R0] £command_power §R15§!"
+ SHX_army_exp_25_cp_25_tt: "执行该决议将花费$SHX_army_exp_25_cp_25_blocked$"
  war_support5: "£war_support_texticon §H5%§!"
  war_support10_blocked: "£war_support_texticon §R5%§!"
  war_support10: "£war_support_texticon §H10%§!"
