--- a/localisation/KR_Qing_l_simp_chinese.yml
+++ b/localisation/KR_Qing_l_simp_chinese.yml
@@ -587,6 +587,14 @@
  QIE_mop_up_south_desc:0 "占领洛阳之后，我们现在可以集中力量摧毁前直系军阀控制的国土上的孤立驻军。这将非常耗时，但是确保陕西，湖北和其他省份的安全对巩固我们的统治至关重要。"
  QIE_final_push:0 "最后一战"
  QIE_final_push_desc:0 "直系军阀负隅顽抗的军队溃逃到了武昌，十年前他们就是在那里击败了国民党。这次他们不会那么幸运了！我们将彻底消灭这些叛徒，并确保中国属于我们！"
+ QIE_eyes_on_the_border:0 "守望边境"
+ QIE_eyes_on_the_border_desc:0 "山西省界上爆发了公开的战争，沈阳的敌人对京城虎视眈眈。如果我们不能保证边界安全，他们肯定会冲击我们摇摇欲坠的统治地位。"
+ QIE_fangs_on_the_border:0 "边境上的獠牙"
+ QIE_fangs_on_the_border_desc:0 "由于害怕直系或满清的报复，难民涌向了我们与奉天的边界。这些平民之间爆发了小规模的冲突，这使得奉天的边界哨所纷纷对边界他们一侧的骚乱做出反应。如果我军不能出面妥善处理，他们肯定会察觉到我军边界守备不力，从而发动突袭。"
+ QIE_SHX_intervention:0 "中原大战"
+ QIE_SHX_intervention_tooltip:0 "由于我们急着保障我们在西部的地位，我们只有§R有限的时间§!在冯玉祥坐大之前解决问题。"
+ QIE_fear_fengtian: "§R如果我们没能在边境地带好好布防，奉天肯定会察觉到这一机会。§!"
+
  QIE_buy_german_eqip_decisions:0 "购买德国多余的装备"
  QIE_buy_german_eqip_decisions_desc:0 "由于我们与德国使馆之间的关系，只要我们有充足的资金，并愿意持续保障德国人在我国的利益，世界上最强大的武器库就在我们手中。通过消耗政治点数和£GFX_german_coin_texticon 德国的影响力我们可以获得强力的武器。\n\n§Y现在的德国影响力：§! [?QIE.party_popularity@market_liberal|%0]\n\n警告！尽管我们的军队肯定赞赏德国装备的强力，但平民百姓对德国的广泛影响将会产生不容小觑的反感！"
  QIE_buy_ger_rifles:0 "购买德制枪械"
@@ -1160,9 +1168,10 @@
  qiecoup.20.d:0 "离洛抵京后，吴佩孚臭骂了一顿曹锟，他指明这个邀请完全就是请君入瓮。即便如此，玉帅仍然决定参加这场会议。当两个人准备入殿时，吴佩孚命令他的保镖在殿外等候。除了传统的佩刀之外，殿外的守卫没有其他武装，而直系士兵腰间可都是别了枪的。"
  qiecoup.20.a:0 "他们现在走进了大殿……"
  qiecoup.21.t:0 "卫兵冲进了大殿！"
- qiecoup.21.d:0 "当两个人进入大殿并在皇帝面前跪下时，大约有十二名全副武装的亲兵冲进了大殿！他们前进并试图逮捕这两个人，而溥仪则转身逃离了大殿！听到骚动之后，吴佩孚的近卫迅速冲了进去，而吴佩孚和曹锟则躲在柱子后面，以免被击中。子弹在大殿古老的柱子之间穿行，击碎了无价的瓷器，也击伤了曹锟。当停火的一瞬间，胜败就会揭晓。"
+ qiecoup.21.d:0 "殿门缓缓开启，大帅和总裁在朝臣唱名拜迎之下，气宇轩昂地走进了乾清宫。面前是大清龙椅，上坐着九五至尊、大清天子、宣统皇帝陛下。二人上前时，侍立皇上两侧的郑孝胥、爱新觉罗·载涛、爱新觉罗·溥杰缄默不语，仿佛在坚持要求曹吴叩拜皇上。这对吴佩孚这样的共和派来说相当令人作呕，不过他还是忍气吞声，曹锟同样如此。\n\n在死一般的寂静后，殿门突然大开，十几名全副武装的皇帝亲兵冲上殿来！他们拱卫着皇上、亲贵和大臣，并意图上前逮捕曹、吴二人。溥仪显然对眼前的情况毫无预料，吓得魂飞魄散，拔腿就跑出了乾清宫。守卫在外的直系卫兵们也迅速调集了其他仪仗卫兵，一同冲进殿内。\n\n随后便爆发了交火，吴佩孚和曹锟闪身躲在殿中的柱子后，掏出了事先备好的枪，对那些想要上前抓捕自己的人开火回击。子弹在古老的殿宇内呼啸而过，打碎了文物，也打伤了直、清两方的卫兵。然而枪声停息之时，只有一方会笑到最后。"
  qiecoup.21.a:0 "吴佩孚和曹锟被杀了！政变成功了！"
  qiecoup.21.b:0 "皇帝的亲兵们陈尸大殿！"
+ qiecoup.21.c:0 "一片死寂..."
  qiecoup.22.t:0 "皇帝一鸣惊人"
  qiecoup.22.d:0 "溥仪紧张地走回房间，凝视着地上两具满是弹孔的尸体——曾经的玉帅吴佩孚和他的良师益友、国会总裁曹锟已经确切的死掉了。溥杰和其他几位满族亲兵拿着冲锋枪走了进来，“我敬爱的皇兄，是时候将这一切昭告天下了。”溥仪转身看向溥杰，“我……”他的语气中没有一丝自信，“我不确定我能办到。”正当溥杰准备说些什么的时候，直系叛军的领袖李炳之冲进了殿内。\n\n“陛下！我们已经控制了北京城！”他大力一跪，几乎完全趴在了溥仪面前。“但蒋百里和其他几位直系将军已经撤到了洛阳！他们正打算发起新一轮攻势歼灭我们并占据北京。”溥杰走到溥仪身边，低声耳语到。“现在你是皇上，你得有个皇上的样子。”溥仪努力整理了一番心情。“奉天承运皇帝诏曰，凡未于明日内上表效忠者——”他破音了，但随即故作镇定。“凡未上表效忠者皆为我大清之朝敌！此宜即可布告中外，咸使知悉！”"
  qiecoup.22.a:0 "可恶叛徒，死有余辜！"
@@ -1608,6 +1617,18 @@
  qiefor.87.t:0 "北京的骚乱！"
  qiefor.87.d:0 "自从吴佩孚元帅拒绝干预八省联合的崩溃以来，我们在北京的代理人报告了那里紧张不安的气氛，吴佩孚的愤怒得罪了清政府内的每一个主要权力集团。今天早上，一伙不满的直系将军与一群年轻的激进军官和满洲勋贵结盟，杀害了吴佩孚和曹锟总统，并“复辟”了溥仪皇帝！更糟的是，他们利用这次政变作为撵走德国在华势力的机会，并凭借我们在中国境内的不受欢迎来支持他们摇摇欲坠的新政权。现在我国大使馆和北京理事会办公室外已经爆发了大规模骚乱，我国大使为了保证各员工的安危，下令所有非必要的工作人员离开北京，前往相对安全的天津。"
  qiefor.87.a:0 "该死！"
+ qiefor.90.t: "北京空虚"
+ qiefor.90.d: "北京政权不断将越来越多的力量投入南线和西线，对集中在东北边界、憋着一股劲的我军部队毫无防备。日子一天天过去，几支锐意进取的部队已经突破了北京曾严防死守的边界。在首都政治动荡导致军队频繁清洗的影响下，前线上的[QIE.GetAdjective]部队既无组织又意志消沉，以至于我们的先锋部队轻松得手，士气大增。军中急于立功又想展现自己能力的指挥官们，也没有向上级请示，便迅速推进，不几日，我们的旗帜就在长城的重要门户山海关上迎风飘扬。\n\n这一进军的消息传开后，[QIE.GetAdjective]前线的有序后撤迅速转变成溃不成军的逃逸。此前据守牢固的边防阵地被不战而弃，我们一路追击直至戴河。然而就在此时，随着沈阳爆发抗议、秦皇岛新占区域内爆发铁路工人大罢工，我们的高级指挥官不得不重新接过了指挥棒。他们选择巩固现有阵地，守住自然防线，而非继续深入敌境冒险，以避免可能的局势反转。"
+ qiefor.90.a: "我们离北京又近了一步！"
+ qiefor.91.t: "山海关大败"
+ qiefor.91.d: "由于我们的新政府在西部和南部的战事吃紧，北方的劲敌终于按捺不住南下的欲望。奉军长驱直入，我们的边防军与之相比归于弱小，几乎没有任何抵抗，山海关失守，因此具有象征意义的长城已不在我手。我们驻守在边境的驻军人手不足军心消极，被敌人的进攻吓破了胆，他们溃不成军，一枪未发就放弃了宝贵的前沿防御。\n\n幸运的是，戴河极大地阻碍了东北军继续前进的步伐，使我们不至于一败涂地，我们的将军们成功在戴河此岸重整秩序。不过，这场大败依然动摇了我们军队的士气，前线的指挥官们恳求我们发兵增援，以防止此类事件再次发生。他们警告说，戴河之险只能阻挡[FNG.Capital.GetCapitalVictoryPointName]方面前进的野心一时，无论我们在中原面临何种威胁，与北京失守的风险相比，一切需要为之让步。"
+ qiefor.91.a: "可笑，东北军入了满族人的关。"
+ qiefor.92.t: "戴河大桥"
+ qiefor.92.d: "虽然我们胜利穿越了长城的山海关，并将敌人完全逼退至戴河畔，但[QIE.GetAdjective]指挥部却迟迟不承认败局。不管是因为通讯不畅、普遍的指挥无力，还是出于顽固地想要在中原地带彻底消灭国民军的愿望，他们的反应始终笨拙且无效，在作为天然界线的河流两岸留下了众多漏洞。\n\n尽管我们的高级指挥官对现状感到满意，不愿意深入推进，但散兵游勇的侦察小队则显得更加有进取心。他们很快就发现了多处把守不善或甚至完全无人看守的重要渡口，迅速建立起桥头堡。急于争取功名的军官就此开展了一场混乱竞赛，他们争相声称自己是第一个到达北京的。当军队最终抵达城郊时，当地警方才在设防点开火还击，迫使进攻暂停。由于担心急功近利，上级下令限制了进一步的进攻。北京已遥遥在望，几乎就在奉天新前线的咫尺之处，人们也在观望——大帅什么时候会下令发动攻击。"
+ qiefor.92.a: "吃一堑长一智，胜利就在眼前。"
+ qiefor.93.t: "北京告急！"
+ qiefor.93.d: "尽管我军惨烈地失去了山海关，且部队一路溃败到戴河，但我参谋本部却仍不愿承认此一大败。可能是因为通讯不良，不然就是普遍无能，再不然可能是顽固地希望将国民军在中原大战中歼灭，他们的反应十分缓慢且无用——在河对岸留下了巨大防御破口，此一结果已导致天然边界实际成为了现阶段的战线。\n\n奉系侦察队显然对戴河这一天然边界划分仍不满意，因此对该区进行了进一步侦察，并发现了多个把守不善的重要渡口。而他们只遭遇最低限度的抵抗就得以建立几个桥头堡，使我军再次向北京溃逃。幸亏北京郊区的地方警察还可以在最后一刻保卫这座城市，而奉天战线后方的炮兵部队也误伤了他们的先头部队。虽然在这场突袭中失去了大量地盘，不过好在我们保住了首都。"
+ qiefor.93.a: "要是下次还是这么赢，就再也没有下次了。"
  qiefor.101.t:0 "杨森站住脚了"
  qiefor.101.d:0 "我们在四川任命的督理杨森，在该省的内战中取得了胜利！这对我们四川和我们的政府而言都是个好消息，一旦杨森彻底控制了该地区，我们就可以要求他维持同我们的联盟关系。"
  qiefor.101.a:0 "好极了！"
@@ -3806,7 +3827,6 @@
  QIE_he_xie_an_ding:0 "自由、和谐、平等"
  QIE_he_xie_an_ding_desc:0 "共和国的子民将享受到他们身为国家主人应得的一切。"
 
- qiecoup.21.c:0 "一片死寂..."
  qiehunluan.1.t:0 "北京城的新黎明"
  qiehunluan.1.d:0 "一个令人难以置信的消息从紫禁城中传来，我们的陛下宣统皇帝、皇太弟溥杰与帝国军队的总指挥官玉帅吴佩孚、国会总裁曹锟等诸多人士死于一场史无前例的宫廷内乱之中，一时间谣言四起，有人称是皇太弟预谋篡权所致，也有人说是玉帅要自行称帝所致...总之这场宫廷内乱所引发的波澜波及了整个华北平原，原本归吴佩孚掌管的洛阳、南直隶一带也在混乱中失陷于其他军阀之手。而北京城内也没有好到那里去，奉军南下的消息不胫而走，仅靠蒋百里等人维护的治安难以维系，无论如何在皇帝与总司令双双殒命的当下，最紧迫的问题是谁来主持北京城？\n\n对这个问题国会、军队、满清贵族都有着自己的诉求，他们都想要这片区域归属于自己掌控。在国会之中，和谐社团早已破裂，失落的政客们汇聚在江亢虎、徐勤等人身边组成新的同盟，他们呼吁稳定局势，重新加冕皇帝继承大统，由国会履行职责，让政府重新步入正轨。而军队之中，曹锟和吴佩孚等人的死亡，直系整体的衰老，使得新生代蒋百里脱颖而出，尽管如今他艰难的维系着北京城的治安，但是直系的残部已经向着北京开拔，到那时，就没有人能够否认他成为二代吴佩孚的可能性。满清贵族们的处境也没好到哪里去，皇帝与唯一继承人皇太弟的殒命，究竟推选谁来继承大统成了一个老大难问题，现在最好的选择就是让宣统皇帝仅剩的弟弟溥任继承大统，由载涛等人监国。混乱依旧在持续，但是没有那么多时间留给他们来扯皮了。"
  qiehunluan.1.a:0 "时间不等人..."
