--- a/localisation/KR_Shanxi_l_simp_chinese.yml
+++ b/localisation/KR_Shanxi_l_simp_chinese.yml
@@ -204,6 +204,8 @@
  SHX_yan_authoritarian_democrat_party_long:0 "杨虎城派\n§g冯玉祥彻底失败，被逐出了我省，国民军不可逆转地分崩离析。军中的社会主义分子走上了自己的道路，一些冯玉祥的亲信选择跟随他一起流亡，其他人则加入阎锡山的政府，为了一份工作用尽手段，尽管如此，仍有少数人围绕在杨虎城周围，选择继续抗争。杨虎城生于陕西，曾在孙岳的国民军中担任下级军官，在国民军撤退到他的家乡后，他声名大噪，带领这些人藏匿于陕西的山区之中，名义上服从阎锡山节制，称为陕军，杨虎城希望以这种方式保有军事上自治的可能性，同时这也使他饱受非议，尽管杨虎城辩称这是自保所必需的，许多人仍将这种名义上的服从视为对国民军的深刻背叛。无论如何，对于阎锡山来说，这些人在未来所能造成的威胁微乎其微。§!"
  SHX_feng_paternal_autocrat_party:0 "晋系残党"
  SHX_feng_paternal_autocrat_party_long:0 "新晋系\n§g在阎锡山政府因国民军进击而崩溃的同时，他的追随者争先恐后地在他小王国中开辟自己的立足之地。洗心社狂热者集结了在阎锡山侄子梁化之的旗下，省政人员和乡绅基本上都和王骧一同流亡，而山西省军则被阎锡山的亲信将领瓜分。商震与大批部下分道扬镳并加入了国民军新政府，此举被许多旧省政人员斥为叛变。与此同时，傅作义和徐永昌在旧晋系忠诚派中建立了自己的势力，并山西省的简称命名，称为“新晋系”。尽管人们都认为新晋系会为新政府带来麻烦，但他们应该掀不起什么风雨。§!"
+ SHX_jia_jingde_remnant_party:0 "阎锡山忠诚派"
+ SHX_jia_jingde_remnant_party_long:0 "山西省政府（流亡）\n§g随着阎锡山的重要亲信从太原撤到北京的新老巢，所剩无几的旧政府成为了贾景德的囊中物，他是阎锡山政府的资深官僚和省政府秘书长。在阎派外逃后，他就被阎锡山任命为副督理，尽管表面上这是在奖励他的忠诚，但考虑到此刻国民军对太原的进攻迫在眉睫，这份奖赏显得徒有其名。\n\n话虽如此，贾景德仍然召集了所有他叫得动的人，当中包括残余官僚、由乡绅支持的反社会主义民兵、传统儒家主义者、乡郊知识分子、商界利益集团以及所有他能凑出来的保安部队。在这种时刻中，贾景德出任山西政务厅厅长和山西政府警务处处长的经验大派用场，但他还是尽量避免直接指挥那些摧残山西的战斗。§!\n"
 
  SHX_zhao_dai_wen: "赵戴文"
  SHX_yan_xishan: "阎锡山"
@@ -563,6 +565,11 @@
  SHX_suiyuan_lay_tracks_to_lanzhou_decision_desc:0 "由于远离中国腹地，西北的回族常感到与中国的政治相隔绝。这给了他们某种超然独立的态度，使他们脱离了国家更大的斗争。要扭转这种地方主义，把西北的资源开发出来(或把我们的资源带到边疆)，第一步就是建设通向甘肃省会兰州的铁路。这需要一些资源，但我们应该能弄到一组满足军事运输用途的基础轨道。"
  SHX_suiyuan_lay_tracks_to_zhangye_decision_desc:0 "随着向西进入甘肃通道的打通，我们如今成功在甘肃和张掖间建立了联系，让我们能深入戈壁进入河西走廊。尽管非常烦人且耗时，这都是我们成为中国西部主宰之路上必要的工作。"
  SHX_suiyuan_lay_tracks_to_suiyuan_decision_desc:0 "绥远对我们来说是一个非常有价值的省份，但通往它的大部分铁路要么在我们的对手的控制之下，要么有被他们控制的风险。冯玉祥和他的国民军通过北京-绥远铁路（也称京张铁路）从北京撤退，已能证明这条铁路的重要性，大同是这条干线上的关键一站，第四次直奉战争结束后，直军占领了这里。\n\n因此，我们必须铺设一条从太原到绥远的新铁路，深入山西，远离直系，奉天的影响，甚至避过日本人的耳目。"
+ #宣统维新
+ SHX_Foreign_Policy_decisions:0 "中原大战"
+ SHX_Foreign_Policy_decisions_desc:0 "狡诈的阎锡山已经铁了心要背叛我们！他既无心遵守盟约，也无意赶走德国佬扶持的傀儡皇帝，还得寸进尺侮辱辛亥纲领，如果我们还想活命，就得趁他还在被直系余孽分心时迅速出击，辛亥革命精神仍存于我等心中！打倒阎锡山和他的走狗们，打倒一切胆敢阻碍民族解放的人！"
+ QIE_SHX_intervention_visual_only:0 "中原大战"
+ QIE_SHX_intervention_visual_only_desc:0 "假如我们成功击退北京政府，我们可以迫使他们承认我们§Y对山西的控制权§!。"
 
  SHX_model_governor:0 "模范督理"
  SHX_model_governor_desc:0 "阎锡山能得到这一绰号要归功于段祺瑞，同时他对媒体（通常是国际媒体）面前的表演也为他赢得了一些声誉。他亲自指挥战斗的行为也为他博取了不少关注，也许让他当这个领袖是最合适的选择。"
@@ -836,6 +843,8 @@
  SHX_automatic_Yan_purge_tooltip: "§R假如阎锡山消灭了国民军威胁，他们将会被立即清洗！§!"
  SHX_automatic_GMJ_coup_tooltip: "§R假如国民军获得了军事优势，他们将会立即起事！§!"
  SHX_lategame_begin_flag: "§G我们已经凭借自己的努力成为了一股不可忽视的势力§!"
+ SHX_Yan_purpose: "§L我们决定追随阎锡山对山西未来的展望§!。"
+ SHX_Feng_purpose: "§L我们决定接纳冯玉祥对山西未来的展望§!。"
 
 #国家精神
  SHX_neutrality:0 "山西中立政策"
@@ -1023,6 +1032,8 @@
  SHX_baoding_investment_idea_desc:0 "虽然中央为我们提供了施工顾问和工程师，协助我们发展军事工业，但我们也不得不用微薄的省库来支付他们的服务。"
  SHX_fortress_shanxi:0 "山西堡垒"
  SHX_fortress_shanxi_desc:0 "旧中央政府的倒台可能会作为后辛亥时代的关键时刻载入史册。随着多股势力正集结华北，[SHX.GetLeader]决定坚守阵地，而不是冒险出动先发制人。这将给[SHX.GetName]时间来恢复实力并巩固所得，但可能会丧失战略主动性。"
+ SHX_central_plains_war_idea:0 "中原大战！"
+ SHX_central_plains_war_idea_desc:0 "冯玉祥察觉到阎锡山准备向保皇派势力倒戈，于是他集结部队突袭了晋系防线，抢在阎锡山及其盟友巩固权力之前攻占关键阵地。许多阎锡山的共和派追随者对其支持北京反动派的决定感到失望，因此纷纷叛变，导致其防线出现了许多漏洞，尤其是在与直系残党的战斗中。显然，阎锡山对此毫无防备，但用不了多久，他就调动整个北京的力量来对付我们。"
  SHX_qie_dominated_econ:0 "北京-山西关系：紧密合作"
  SHX_qie_prevelant_econ:0 "北京-山西关系：高度合作"
  SHX_qie_equal_econ:0 "北京-山西关系：平等合作"
@@ -1855,6 +1866,49 @@
  shx.zhifeng.30.d:0 "虽然在冲突开始时，很多人怀疑我们的胜算，甚至[SHX.GetLeader]也可能没有预见到事态的发展，但现在局势已经开始向对我们有利的方向发展！我们最近的进展使我们深入到中国北方的中心地带，为在[SHX.GetNameDef]领导下实现统一带来了令人兴奋的可能性。我们的精神空前高涨，军官们也朝着统一事业高歌猛进。\n\n然而，每走一步，都会离家乡更远。虽然此时我们的军队包括来自诸多省份的士兵，但中国军阀割据的现实是，大多数军队都是地区性的。山西军队甚至一度自诩所有士兵都是本省人，而事实上，即使是相对成分多元的国民军，也在陕西休养了近十年。因此，我们对许多国人来说仍是外人，当地人对我们感到好奇，不知道我们是否会成为比前任更仁慈的统治者。\n\n更令人担忧的是这场远征对家乡的影响。为了派遣这支部队，我们榨干了一切资源（金钱、人力、劳动力），而我们的胜利暗藏着这场冲突即将结束的承诺。如果我们无法在合理的时限内履行这一承诺，就有可能加速我们的崩溃。尽管如此，从[SHX.Capital.GetCapitalVictoryPointName]出发的勇士们仍然难以抑制高昂的斗志，尤其是当统一似乎只差一座城市的时候..."
  shx.zhifeng.30.a:0 "全力以赴，争取胜利！"
  shx.zhifeng.30.b:0 "机会在前，我们还是要脚踏实地。"
+
+ SHX.manchu.1.t:0 "[GetMonth]阴谋"
+ SHX.manchu.1.d:0 "就在还不到一年前，因为不满阎锡山和北京打交道，冯玉祥还曾从太原出走，而今天，省里互相争斗的两派却又不得不坐回桌前，权衡首都北京将要发生的阴谋的影响。阎督理和那些满洲勋贵、失望的知识分子以及心怀不满的中央军官达成了协议，利用最近因八省联合动乱引发的大规模公众抗议，毕其功于一役，推翻直系对国家的统治。他们将对吴佩孚、曹锟和蒋百里等直系军方高层进行斩首行动，如果成功，直系将陷入群龙无首的局面。\n\n这个计划并非万全，但晋系是个命运与共的整体，如果吴佩孚察觉了阴谋并反过来攻打山西，省府和国民军就会一起完蛋。不过，高风险伴随的是高回报，尽管冯玉祥怀疑阴谋集团能不能真正掌控局势，但他也承认，可以利用这个机会削弱直系、占领华北平原各要冲，这能同时增强阎冯两人的势力。\n\n在双方高级军官的见证下，各怀鬼胎（这是个公开的秘密）的两人达成了协议，冯玉祥部将收回黄河以南的故地，而阎锡山部将统治黄河以北，若能成功打进北京，阎锡山就会废黜满清皇帝，二人将携手再造共和。"
+ SHX.manchu.1.a:0 "冯玉祥不情愿地与他握了手。"
+ SHX.manchu.2.t:0 "西安陷落"
+ SHX.manchu.2.d:0 "曹锟和吴佩孚的尸体滚下台阶还不到一天，山西省军、国民军和中央军中的反直系保皇派就结为联军开始行动：满洲勋贵及其盟友控制了北京，并准备抵御任何可能的奉系干涉，西面的联军也没闲着，阎锡山命令省军，在傅作义和徐永昌率领下，倾巢而出攻向晋东，与固守这片山区的直系部队开始了大规模交火，目标是抢占南下的关键铁路基建设施，并与北京的联军打通联系。\n\n而在晋系南边的关中地区，国民军大胆出击，大败毫无防备的陕西督理刘镇华部，横扫河渭地区。直系疯一般地试图支援省府西安，但在农村地区，国民军支持的游击队大量起义，为直系的增援制造了重重阻碍，甚至国民军先头部队还没到，这些起义军在当地人的支持下，就已经占领了这座城市。\n\n在中原地区，政变行动的进展甚至超出了策划者的预料，现在他们不得不面对一个非常现实的问题：实际治理华北。蒋百里躲过了对他的抓捕（如果有计划抓捕他的话），仍然逍遥法外。虽然很快西安就会易手，但直系残党还是很可能从吴佩孚的老巢武汉继续南撤，另寻落脚之处。"
+ SHX.manchu.2.a:0 "机会已临，解放将至！"
+ SHX.manchu.2.b:0 "我们已经尽到义务了，希望他们也能一样。"
+ SHX.manchu.3.t:0 "黄河战役"
+ SHX.manchu.3.d:0 "新的一周，对直系的战争还在继续，在高层缺位的情况下，曾经统治中国的直系集团陷入了混乱。西安已经落入国民军之手，冯玉祥命令部队向南扫荡，意在兵进武汉。但是，在收复曾经的地盘河南时，他在洛阳遭到了激烈的抵抗。\n\n与此同时，北京的联军部队分为两股，较大的一支离京前往奉系边界，较小的一支向南进军，寻求与其他联军部队会师。阎锡山的山西省军粉碎了晋东的直系守军，再次完全控制了山西，他随即命令部队迅速东进，夺取京汉铁路，并于今晨成功。这是战争的一个决定性的瞬间。\n\n在与武汉老巢隔绝的情况下，黄河地区的直系残部选择投降，所谓“中原同盟”几乎完全控制了华北。保定守军残部向阎大帅投降，他因此控制了那所中国最好的军校。在麾下晋军扫荡直系残党的同时，阎锡山乘火车前往北京，而他的野心膨胀的速度比火车的速度还要快得多。"
+ SHX.manchu.3.a:0 "进军，钉上直系的棺材板！"
+ SHX.manchu.3.b:0 "阎大帅，干得好！"
+ SHX.manchu.4.t:0 "中原同盟崩溃！"
+ SHX.manchu.4.d:0 "对洛阳的攻击比冯玉祥预想的要慢得多，战斗持续了好几个星期，直到其他联军部队增援而来，从北面和东面包围了城市，这座河南重镇才终于被攻克，直系部队甚至大多有序撤出了这座城市，留下胜者们自相争斗。阎锡山曾经承诺，事成之后冯玉祥可以控制黄河以南，但新一届市政当局（很多还是老班子留任的）却在很大程度上违抗着冯玉祥的命令，冯玉祥试图用国民军一系的革命者取代这些人，却遭到了中原同盟各方的坚决抵制。\n\n而且，这还不是“革命将军”唯一担心的事：不到一周前，阎锡山接受了钦差大臣兼大清帝国陆军总司令的职务（即吴佩孚曾经的职务），如果他还打算信守承诺废黜皇帝，这明显是多此一举。面对很可能被背叛的局面，冯玉祥召集起他的十三太保，商讨出了一个新计划：政变中的政变。\n\n为防止阎锡山背叛，这位“倒戈将军”打算偷袭阎锡山的山西老巢，以期在阎锡山立足未稳之际摧毁其权力基础。迅速重新部署后，国民军突袭晋西地区，可能是得到了商震等被留在后方的坚定共和派军官的帮助，他们打了省军一个措手不及，但在当地士绅的支持下，反社会主义的民兵毫不费力地保住了太原城。\n\n战斗已经打响，国民军迫近了新任钦差大臣的老巢太原，战争迎来了新的阶段。双方都缺乏应对如此规模战斗的装备，也都因反直战争而师老兵疲、因占领了广大地区而兵力不足。但无论结果如何，华北的命运将在几个月内决定。"
+ SHX.manchu.4.a:0 "冯玉祥将会完成革命事业！"
+ SHX.manchu.4.b:0 "阎锡山将拯救中国！（切换为大清）"
+ SHX.manchu.4.c:0 "阎锡山会为帝国带来和平、公道与安定。"
+ SHX.manchu.5.t:0 "中原休战！"
+ SHX.manchu.5.d:0 "几周以来，直系残党、北京的反直系团体、阎锡山晋军和冯玉祥国民军之间乱战不休，中原地区血流成河。由于损失惨重，而且阎锡山及其北京盟友已经牢牢控制住华北，这对曾经的“结义兄弟”达成了在当前战线上停火的协议，冯玉祥可以借机巩固他的地位（还可能准备下次继续进攻阎锡山），而阎锡山则需要腾出手来彻底清剿直系。\n\n两人都对这个结果不太满意，但要是再打下去，冯玉祥就会渐渐敌不过大清中央政府的优势资源，而阎锡山则会在这片贫瘠的山区浪费关键的资源。直系残党也许能被完全剿灭，但取而代之的阎锡山集团，实力还是令许多人担忧，日本及其奉天走狗虎视眈眈，而南方各路人马也已经擂响了战鼓。\n\n人们曾经以为华北的势力均衡要比八省地区稳固得多，而今的情况好似平地乍起风雷，局势会如何发展目前尚不明朗。"
+ SHX.manchu.5.a:0 "我们以后还会再见的..."
+ SHX.manchu.5.b:0 "这个仇，我们记下了！"
+ SHX.manchu.6.t:0 "中原大战爆发！"
+ SHX.manchu.6.d:0 "智者千虑必有一失，最好的计划也难免有失手的时候，但很少有计划像阎锡山这次豪赌一样行险徼幸、孤注一掷。晋系集团支持了一个由各路人士组成的阴谋集团，由此卷入了针对吴佩孚的背叛阴谋之中。那些蠢货搞砸了，阴谋被发现后，玉帅报复式地清洗了他们。在积攒物资、调动军队的过程中，我们并没有暴露出参与其中的事实，但在审讯中，那些人却把我们供了出来。直系马上就会来报仇，我们还没多少时间备战。\n\n情况非常不利，但希望也没有完全丧失。一如往常，我们有两支强大（虽然现在没那么强了）的军队，虽然大规模整合为时已晚，两军高层还是在太原匆匆成立了联合司令部。坐拥山河天险，凭借士兵的勇气和将军们的指挥，我们也许能将中央军挡在门外。\n\n不过要注意，战争不会很快结束，不是你死就是我亡，在一方被完全摧毁之前，直系是不会稍有松懈的。"
+ SHX.manchu.6.a:0 "战端再起，不容有失！"
+ SHX.manchu.7.t:0 "临时省会"
+ SHX.manchu.7.d:0 "即将成就大业之际，阎锡山的背叛让我们了陷入困境。至少现在，山西省政的中心太原还在他手上，即使我们能重夺太原，战火也会破坏城市，而且那里全是忠于阎锡山的人，在完成国家统一之前，我们需要另寻基地。\n\n过去，国民军司令部位于陕北延安，作为小城市，在面对敌人进攻时，这里会更易于守备。我们在此地拥有既有军事基础设施，可以把这里作为高效的战时基地。\n\n此外，我们最近夺取了四大古都之一、历史名城西安。除自古以来的重镇地位外，它还拥有重要的铁路基础设施，并且由于此前的工作赢得了信任，当地人普遍支持我们。但是，此地容易遭到敌人反击，实际上数百年来，西安在中国政治中的重要性一直在下降，辛亥革命期间对满人的屠杀进一步降低了此地的价值。\n\n由于我们需要建立临时军事基础设施，以弥补在太原失去的那一部分，[SHX.GetLeader]必须尽快做出决定。忠于我们的人从太原兵工厂偷运出的设备，加上现有的军事生产设施，我们就能建立起军工体系，用来对抗反动势力。"
+ SHX.manchu.7.a:0 "我们会留在延安。"
+ SHX.manchu.7.b:0 "我们将移师西安。"
+ SHX.manchu.9.t:0 "临时首都"
+ SHX.manchu.9.d:0 "中原大战的结束带来了和平，但风波仍未过去。我们正努力重建，并准备迎接下一次战争，人们的关注点又一次放在了首都问题上。毕竟，现有首都是基于战时的经济需求选定的，不一定符合未来行动基地的要求。经过一些讨论，[SHX.GetRulingParty]高层决定……"
+ SHX.manchu.9.a:0 "迁至安全的延安。"
+ SHX.manchu.9.b:0 "迁至历史重镇西安。"
+ SHX.manchu.9.c:0 "迁至工业化的太原。"
+ SHX.manchu.9.e:0 "迁至洛水之北的洛阳。"
+ SHX.manchu.9.f:0 "留在[SHX.Capital.GetCapitalVictoryPointName]。"
+ SHX.manchu.10.t:0 "延安陷落"
+ SHX.manchu.10.d.yulincapital:0 "中原战火肆虐，华北受到了说不尽的伤害，而对我们来说，最大的伤害莫过于[QIE.GetAdjective]攻陷延安。长期以来，陕北榆林地区一直是我们的行动基地，也是各种支持同情我们的人聚集的地方。虽然我军还在继续作战，但丢失延安对我们威望和关系网的损失还是难以估量的。"
+ SHX.manchu.10.d.yulinnotcapital:0 "$SHX.manchu.10.d.yulincapital$\n\n谢天谢地，我们有先见之明，早已搬到了[SHX.Capital.GetCapitalVictoryPointName]。尽管基础设施并没有全数转移，但在延安之战中，几乎没有我军高级将领被俘或失散。不过，我军的士气还是明显低落了下去，我们的势头很可能已经丧失掉了。"
+ SHX.manchu.10.a:0 "彻头彻尾的灾难！"
+ SHX.manchu.11.t:0 "中原大战"
+ SHX.manchu.11.d:0 "中国中原地区开始了大战！长期统治中国的直系强人曹锟和吴佩孚被残忍杀害，数周动荡之后，这场“宣统维新”政变的主要支持者们开始争夺战利品，这个仍因孙传芳之死而步履蹒跚的国家再次充斥着暴力。\n\n中国的君主制命途多舛，阎锡山已经被任命为钦差大臣，但冯玉祥率领国民军发起了政变，发誓要再造共和，而在南方，直系残党仍在抵抗。中原地区是中华文明的摇篮，而今战火在其中肆虐，不禁令人怀疑各方军队能否长久战斗。此外，许多人也在保持关注，看谁可以利用此种局势牟利。"
+ SHX.manchu.11.a:0 "两位强人开始正面对决。"
+ SHX.manchu.11.b:0 "也许我们可以利用这一混乱局势。"
 
  shx.suiyuan.campaign.1.t:0 "我们在绥远的利益"
  shx.suiyuan.campaign.1.d:0 "绥远与晋系军阀西北边界相邻，人烟稀少，矿产丰富。山西和绥远之间只有两段长城相隔。在军阀时代早期，阎锡山以许多匪患借道绥远进入山西为借口占领了此地。绥远名义上是北洋政府的特别自治区，曾被陕西的冯玉祥国民军短暂地占领过。阎冯二人都在争夺鄂尔多斯和乌兰察布地区的控制权，冲突不可避免地爆发了。\n\n绥远是个回族、汉族和蒙古族混居的大染缸，阎冯二人对此地的垂涎被第四次直奉战争的结束打断了。在北伐战争后起兵反抗冯玉祥和国民军的马家军得到了绥远全境的控制权，作为晋系军阀（由阎派和冯玉祥国民军组成）和中央政府最终条款的一部分。马福祥受封蒙藏院总裁，作为他改换门庭的嘉奖。\n\n[SHX.GetNameDef]的力量正在增长，我们在绥远的利益也未减少。此地正受到[MON.GetNameDef]民族主义者的威胁，更别提[XSM.GetNameDef]回族领导层的无能了，我们得赶快行动起来夺回这块宝地。"
